# NexusSU

./: .gitignore  Cargo.toml  README.md  ROM_INTEGRATION.md  build.gradle.kts  index.md  settings.gradle  settings.gradle.kts  zip_template
.github/workflows/: build-apk.yml  build.yml
anykernel_template/: anykernel.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/nexus/su/: MainActivity.kt
app/src/main/res/drawable/: baseline_circle_24.xml  glass_bg.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  themes.xml
build-scripts/: apply_patches.sh  build_kernel.sh  package_anykernel.sh
daemon/: CMakeLists.txt  nexussud.c
docs/: compile.html  hooks.html  index.html  style.css
github/workflows/: build.yml
kernel/: apply.sh  drivers_char_nexussu.c  include_linux_nexussu.h  kernel_nexussu_state.c
kernel/nexussu/: Kconfig  Makefile  nexussu.c
manager/: build.gradle.kts  proguard-rules.pro  settings.gradle
manager/app/src/main/assets/: su.c
manager/app/src/main/cpp/: CMakeLists.txt  nexussu_client.cpp
manager/native/: busybox.c  nexussu_daemon.c  su.c
manager/src/main/: AndroidManifest.xml
manager/src/main/cpp/: CMakeLists.txt  nexus_bridge.cpp
manager/src/main/java/com/nexussu/manager/: MainActivity.kt  NexusApplication.kt  (+1 more)
manager/src/main/res/drawable/: ic_launcher_foreground.xml
module_source/: Makefile  nexus_su.c
patcher/src/: Cargo.toml  main.rs
patches/: susfs-stub.c
payload/: Makefile  injector.c  trampoline.S
scripts/: patch_nexus.sh
src/: main.rs
(+16 files in other folders)
